# dava.engine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  DavaBuild.lua  DavaCMake.py  DavaConfig.in  RE Scene25 Release please.txt  README  build_tools.py  fix_copyrights.py  mainwindow.cpp  version.h
Libs/Collada/: CMakeLists.txt  ColladaCamera.h  ColladaConvert.h  ColladaDocument.cpp  ColladaMaterial.h  ColladaMesh.h  ColladaMeshInstance.h  ColladaPolygonGroup.h  ColladaPolygonGroupInstance.cpp  ColladaPolygonGroupInstance.h  ColladaScene.h  ColladaSceneNodeAnimation.h  ColladaTexture.cpp
Libs/bullet/: Bullet-C-Api.h  CMakeLists.txt
Programs/CMakeTool/: CMakeLists.txt
Programs/Launcher/: CMakeLists.txt
Programs/PerfomanceTests/: CMakeLists.txt
Programs/ResourceArchiver/: CMakeLists.txt
Programs/ResourceEditor/: CMakeLists.txt  cmake.bat
Programs/SceneViewer/: CMakeLists.txt
Programs/TemplateTArc/: CMakeLists.txt
Programs/TestBed/: CMakeLists.txt  ui.uieditor
Programs/Toolset/: CMakeLists.txt  Toolset-common.cmake  Toolset-сommon.cmake
Programs/UIViewer/: CMakeLists.txt
Programs/UnitTests/: CMakeLists.txt
Projects/NGTToolTemplate/: CMakeLists.txt
Projects/PerfomanceTests/: .gitignore  CMakeLists.txt  add_test.py
Projects/SceneViewer/: .gitignore  CMakeLists.txt  NPAPISceneViewerLaunchPage.html  SceneViewer.sln  SceneViewer.vcxproj  SceneViewer.vcxproj.filters  SceneVieweriPhone-Info.plist  TemplateProjectMacOSNPAPI-Info.plist
Projects/TemplateTArc/: CMakeLists.txt
Projects/TestBed/: CMakeLists.txt  ProjectsWin10output.yuv  TestBedVS2010.vcxproj  TestBed_VC2005.sln  TestBed_VC2005.vcproj  Tuprules.lua  add_test.py
Projects/UnitTests/: CMakeLists.txt  NPAPIUnitTestsLaunchPage.html  TemplateProjectiPhone-Info.plist  UnitTests-Info.plist  UnitTests.sln  UnitTests.vcxproj  UnitTests.vcxproj.filters  UnitTestsVS2010.sln  UnitTestsVS2010.vcxproj  UnitTestsVS2010.vcxproj.filters  UnitTestsVS2010.vcxproj.filters.orig  add_test.py  generating_project.bash  result.archive
Sources/Internal/: Android.mk  CMakeLists.txt  DAVAClassRegistrator.cpp  DAVAClassRegistrator.h  DAVAConfig.h  DAVAEngine.h  DAVAVersion.h  DoxygenDocumenation.h  test.h
Sources/TArc/: CMakeLists.txt
Sources/Tools/: CMakeLists.txt  DXTConverter.cpp  PVRConverter.cpp  PVRConverter.h  Version.h
Tools/: CMakeLists.txt  QT_README
Tools/AssetCacheClient/: CMakeLists.txt
Tools/AssetCacheServer/: CMakeLists.txt
Tools/CEFHelperProcess/: CEFDavaRenderApp.h  CMakeLists.txt  make_cef_helper_process.bat
Tools/CEFHelperProcess2/: CMakeLists.txt  make_cef_helper_process.bat
Tools/CMakeTool/: CMakeLists.txt  CMakeTool.pro  configreader.h  configstorage.cpp  main.qml  processwrapper.cpp  processwrapper.h  resources.qrc
Tools/DavaPak/: CMakeLists.txt
Tools/Dep/: CMakeLists.txt  dep.cpp
Tools/FileTransfer/: CMakeLists.txt  CommonTypes.h  TimerTest.cpp  TimerTest.h  UDPReceiver.cpp  UDPReceiver.h  UDPSender.cpp  UDPSender.h  main.cpp
Tools/FontGenMac/: CharacterTablePanel.h  CoreTextArcView.h  CoreTextArcView.m  MyDocument.h
Tools/FontGenerator/: CMakeLists.txt
Tools/IMagickHelperLib/: CMakeLists.txt  FileTools.cpp  FileTools.h  IMagickHelper.cpp  IMagickHelper.h
Tools/ImageUnpacker/: CMakeLists.txt  ImageUnpacker.sln  ImageUnpacker.vcxproj  ImageUnpacker.vcxproj.filters
Tools/Launcher/: CMakeLists.txt  config_example.yaml
Tools/LauncherCmake/: CMakeLists.txt
Tools/MailSenderTest/: Info.plist  MailSenderTest.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h
Tools/NGTProjectQt/: CMakeLists.txt
Tools/PSDTool/: CMakeLists.txt  main.cpp
Tools/ParticleEditor/: TemplateProjectVS2010.vcxproj
Tools/QuickEd/: CMakeLists.txt  CMakeLists.txt.orig  Info.plist  MakefileQt  QuickEd.pro  QuickEd.sln  QuickEd.vcxproj  QuickEd.vcxproj.filters  generic_app_test_QtFramework_ContextDefinition.xml  generic_app_test_preferences.xml  global_setting.settings  make.bat
Tools/RE_NGT/: CMakeLists.txt  plugins.txt
Tools/ResourceArchiver/: CMakeLists.txt  back.ar
Tools/ResourceCompressor/: ResourceCompressor.cpp  ResourceCompressor.sln  zlibPack.c
Tools/ResourceEditor/: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  Editor icon.icns  Info.plist  LandscapeToolsPanelCustomColors.cpp  LandscapeToolsPanelCustomColors.h  MakefileQt  MakefileQtVS2010  MakefileQtXcode  QtIcons.qrc  ResourceEditorQtVS2010.aps  ResourceEditorQtVS2010.sln  ResourceEditorQtVS2010.vcxproj  ResourceEditorQtVS2010.vcxproj.filters  ResourceEditorVS2010.sln  ResourceEditorVS2010.vcxproj  ResourceEditorVS2010.vcxproj.filters  ResourcePacker.sln  ResourcePacker.vcxproj  ResourcePacker.vcxproj.filters  TemplateProjectQt.pro  TemplateProjectQt.sln  TemplateProjectQt.vcxproj  TemplateProjectQt.vcxproj.filters  cmake.bat  generic_app_test_QtFramework_ContextDefinition.xml  generic_app_test_preferences.xml  global_setting.settings  icon.icns  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  make.bat  make_links.ignore.bat  moc_davaglwidget.cpp  moc_mainwindow.cpp  msvs.bat  resource.h  (+3 more)
Tools/ResourceEditor_NGT/: CMakeLists.txt
Tools/ResourcePacker/: CMakeLists.txt  ResourcePacker.sln  ResourcePacker.vcproj  ResourcePacker.vcxproj  ResourcePacker.vcxproj.filters
Tools/ResourcePatcher/: CMakeLists.txt  ResourcePatcher.sln  ResourcePatcher.vcxproj  ResourcePatcher.vcxproj.filters
Tools/Scripts/: fix_copyrights.py  remove_copyrights.py
Tools/TexturePack/: AABBox.h  BaseMath.h  BaseTypes.h  CommandLineParser.cpp  CommandLineParser.h  DefinitionFile.cpp  DefinitionFile.h  ImagePacker.cpp  ImagePacker.h  Math2D.h  Math2DBase.h  Math2DMatrix2.h  Math2DMatrix3.h  MathHelpers.h  Matrix.h  OOBBox.h  PngImage.cpp  PngImage.h  Polygon.h  Quaternion.h  TexturePacker.cpp  TexturePacker.h  Vector.h  main.cpp
Tools/ToolSet/: CMakeLists.txt  Info.plist
Tools/Tup/: build.macos.sh  build.win.sh  patch-1_add_davainit.patch
Tools/UIEditor/: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  Info.plist  MakefileQt  UIEditor.pro  UIEditor.sln  UIEditor.vcxproj  UIEditor.vcxproj.filters  (+1 more)
(+18660 files in other folders)
